--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -6,11 +6,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -39,10 +37,85 @@ h1 {
   line-height: 1.1;
 }
 
+.overlay-button {
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  position: relative;
+  font-weight: bold;
+  background-color: #4a4a4a;
+  border: 2px solid transparent;
+  outline: none;
+}
+
+.overlay-button:hover {
+  border-color: #646cff;
+  color: #00bfff;
+}
+
+.overlay-button:focus {
+  border-color: #ff69b4;
+}
+
+.overlay-button:active {
+  border-color: #646cff;
+}
+
+.active-button {
+  border-color: #ff69b4;
+  background-color: #5a5a5a;
+}
+
+.tooltip {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 10px;
+  border-radius: 3px;
+  z-index: 1000;
+  white-space: nowrap;
+  transform: translateY(-100%);
+}
+
+.sliding-panel {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  overflow: hidden;
+  transition: height 0.5s ease-out;
+  z-index: 20;
+}
+
+.sliding-panel.active {
+  height: 100%;
+}
+
+.panel-content {
+  padding: 20px;
+  margin: 85px;
+  color: black;
+}
+
+.panel-content h2 {
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.panel-content ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
 button {
-  border-radius: 8px;
+  border-radius: 0px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em 0.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -50,28 +123,36 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
 .main-content {
-  margin-top: 120px;
+  margin-top: 110px;
+  overflow-y: auto;
 }
+
 .about-content {
-  margin-top: 120px;
+  margin-top: 110px;
+  overflow-y: auto;
 }
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
@@ -82,42 +163,42 @@ button:focus-visible {
   flex-direction: column;
   align-items: flex-start;
 }
-/* about content */
+
 .about-content {
   display: flex;
   flex-direction: column;
   line-height: 2.0;
-  align-items: start; /* Center children horizontally */
-  justify-content: center; /* Adjust if necessary for internal spacing */
-  /* Add any additional styling here, such as padding or a max-width to control the size */
-  /* If you want this to 'float' in the middle, ensure the container allows it, or adjust accordingly */
+  align-items: start;
+  justify-content: center;
 }
+
 .about-content p {
   padding: 5px;
 }
+
 .about-content h2 {
   font-weight: bold;
   font-size: x-large;
 }
+
 .about-content h3 {
   font-weight: bold;
   font-size: large;
 }
+
 .about-title {
-  margin-top: 20px; /* Adjust as needed */
-  /* Additional styling for the title */
+  margin-top: 20px;
 }
 
-
 ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    unicode-bidi: isolate;
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+  unicode-bidi: isolate;
 }
 
 .transparent-canvas {
@@ -125,5 +206,34 @@ ul {
 }
 
 #default-carousel > div {
-  min-height: 600px;
+  min-height: 650px;
+}
+
+#default-carousel > div.second-carousel-item {
+  min-height: 32px;
+  max-height: 32px;
+}
+
+.footer {
+  width: 100%;
+  background-color: #3c3f41;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  border-top: 1px solid #ff69b4;
+}
+
+.ticker-scroller {
+  padding: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  height: 80px; /* Adjust the height */
+  overflow: hidden; /* Ensure text stays within the div */
+  color: white; /* Ensure text is visible against the background */
+}
+
+.marquee-container {
+  white-space: nowrap;
 }
