--- a/src/frontend/src/components/AIPane.css
+++ b/src/frontend/src/components/AIPane.css
@@ -52,6 +52,7 @@
 .ai-chart-container {
     flex: 1;
     transition: flex 0.3s ease; /* Animation for sliding effect */
+
 }
 
 .ai-right-pane {
@@ -62,13 +63,23 @@
     flex: 0;
     padding: 0;
     overflow: hidden;
+
+
+
 }
 
 .ai-right-pane.ai-open {
     width: 400px; /* Adjust to desired width */
+    height: 100%;
     flex: none;
-    padding: 0; /* Remove padding to align with title bar */
+
     overflow: hidden; /* Hide overflow to make sure the title bar stays fixed */
+    padding-left:5px;
+    padding-right: 5px;
+    padding-top: 0;
+    padding-bottom:5px;
+
+
 }
 
 .ai-right-pane > h2 {
@@ -87,7 +98,7 @@
 
 .ai-rosy-line {
     border-bottom: 1px solid #ff69b4; /* Rosy color */
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .ai-right-pane .ai-content {
@@ -97,7 +108,9 @@
     padding-top: 0px;
     padding-bottom: 40px; /* Additional padding at the bottom */
     overflow-y: auto; /* Enable vertical scrolling */
-    height: calc(100% - 65px); /* Adjust to fit within container minus the height of h2 */
+    height: calc(100% - 55px); /* Adjust to fit within container minus the height of h2 */
+    border: 2px solid #000000;
+
 }
 
 /* Custom scrollbar styles */
@@ -173,7 +186,11 @@
     align-items: flex-start;
     position: relative;
     padding-left: 10px;
+    padding-right: 10px;
     background-color: #000000;
+    border-right: 1px solid #000000;
+    border-left: 1px solid #000000;
+    border-top: 1px solid #000000;
 }
 
 .ai-right-pane h2 {
@@ -186,7 +203,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 6px; /* Adjusted padding for a cleaner look */
+    padding: 0px; /* Adjusted padding for a cleaner look */
     position: absolute;
     bottom: 0;
     width: 100%;
